# qtbase-feedstock

./: README.md  abs.yaml  anaconda.yaml
recipe/: 0001-Disable-unity-build-for-permission-plugins-in-macos.patch  0002-avoid-using-macos-12-resource.patch  0003-cmake-do-not-run-try_run-tests-during-build-time.patch  0003-cmake-fix-path-for-windows-try-run-tests.patch  0003-do-not-link-rcc-to-zstd-on-windows.patch  bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_qt_test.bat  run_qt_test.sh  xvfb-run
recipe/patches/: 0001-Disable-unity-build-for-permission-plugins-in-macos.patch  0001-Set-XCode-version-15.patch  0002-avoid-using-macos-12-resource.patch  0002-set-xcode-version.patch  0003-Removes-the-macOS-specific-CFBundleGetMainBundle.patch  0003-force-qmake-to-use-sdkroot-on-osx.patch  0004-Handle-library-location-path-for-Windows-builds.patch  0004-qt6-conf-osx.patch  0005-Prevent-usage-absolute-path-to-the-currently-running.patch  0005-fix-qlibraryinfo-prefixpath-windows.patch
recipe/test/: CMakeLists.txt  test_concurrent.cpp  test_core.cpp  test_dbus.cpp  test_gui.cpp  test_network.cpp  test_opengl.cpp  test_openglwidgets.cpp  test_printsupport.cpp  test_qmimedatabase.cpp  test_sql.cpp  test_test.cpp  test_widgets.cpp  test_xml.cpp
